frontend/tests/cases/positive/concurrent/withLambda.gr
test0 : (LChan (Recv Int End))
test0 = forkLinear (\c -> close (send c 42))